# UFOP

./: README.md
2022-1/Eletrônica/: Modelo Relatório Aula Prática.docx
2022-1/Eletrônica/Prática/: Modelo Relatório Aula Prática.docx
2022-1/Programação/Lista 10/: questao2.c  questao4.c  questao5.c
2022-1/Programação/Pratica 11/: q3  q4  questa1.c  questa2.c  questao3.c
2022-1/Programação/Prática 3/: atividade1.c  atividade4.c
2022-1/Programação/Prática 4/: atividade1.c  questao2.c  questao3.c  questao4.c
2022-1/Programação/Prática 6/: questao4.c
2022-1/Programação/Prática 8/: atividade2.c  atividade4.c  atividade6.c  atividade7.c  atividade8.c
2022-2/Estrutura_de_dados_1/: matriz.c
2022-2/Estrutura_de_dados_1/Maratona_1/: 1110.c  1763.c  2929.c  exe
2022-2/Estrutura_de_dados_1/Maratona_2/: 1258.c  1766.c  1861.c  exe
2022-2/Estrutura_de_dados_1/Maratona_2_individual/: 1259.c  1260.c  exe
2022-2/Estrutura_de_dados_1/Maratona_3/: 1162.c  exe
2022-2/Estrutura_de_dados_1/Maratona_4/: 1566.c  2136.c  2393.c  exe
2022-2/Estrutura_de_dados_1/Maratona_5/: 1069.c  1244.c  1430.c  exe
2022-2/Estrutura_de_dados_1/Maratona_5_individual/: 1.in  1382.c  1401.c  2.in  2633.c  exe
2022-2/Estrutura_de_dados_1/Maratona_6/: 1449.c  exe
2022-2/Estrutura_de_dados_1/Maratona_6_individual/: 1161.c  1475  1475-1.c  1475-2.c  1475.c  2496.c  exe
2022-2/Estrutura_de_dados_1/Maratona_7/: 1029.c  2654.c
2022-2/Estrutura_de_dados_1/Maratona_7_individual/: 1214.c  1242.c  2095.c  exe
2022-2/Estrutura_de_dados_1/Pratica_1/: README.txt  exe  main  matriz.c
2022-2/Estrutura_de_dados_1/Pratica_10/: avl.c  exe
2022-2/Estrutura_de_dados_1/TP1/: exe  (+2 more)
2023-1/POO/: exe  q6.cpp  teste.cpp  teste1.cpp
2023-1/Programacao_Funcional/: p1-Antiga.hs  questao.hs  teste.hs
2023-2/Engenharia_I/11 - Lista 5/untitled/: CMakeLists.txt  main.cpp
2023-2/Estatistica/: codigo.py
2024-1/Engenharia_de_software_2/: README.md
2024-2/Compiladores/exercicio-01/: README.md  flake.nix  haskell-review.cabal  hie.yaml  scripts.nix
2024-2/Compiladores/exercicio-01/app/: Main.lhs
2024-2/Compiladores/exercicio-02/: README.md  codigo.limp  codigo2.imp  documentation-tool.md  imp.cabal
2024-2/Compiladores/exercicio-02/app/: Main.hs
2024-2/Compiladores/exercicio-02/src/Imp/Frontend/Lexer/: Lexer.x
2024-2/Compiladores/exercicio-02/src/Imp/Frontend/Parser/: Parser.hs
2024-2/Compiladores/exercicio-02/src/Limp/Frontend/Lexer/: Lexer.x
2024-2/Compiladores/exercicio-02/src/Limp/Frontend/Parser/: Parser.hs  Parser.y
2024-2/Compiladores/exercicio-03/: CHANGELOG.md  LICENSE  README.md  documentation-tool.md  limp.cabal
2024-2/Compiladores/exercicio-03/app/: Main.hs
2024-2/Compiladores/exercicio-03/codigo_teste/: teste.c  teste.dot  teste.imp  teste.limp  teste.md
2024-2/Compiladores/exercicio-03/src/Documentation/: Doc.hs  DocStmt.hs
2024-2/Compiladores/exercicio-03/src/Limp/Backend/C/: ExpCCodegen.hs  StatementCCodegen.hs
2024-2/Compiladores/exercicio-03/src/Limp/Backend/SVM/: ExpCodegen.hs  StatementCodegen.hs
2024-2/Compiladores/exercicio-03/src/Limp/Frontend/Lexer/: Lexer.hs  Lexer.x
2024-2/Compiladores/exercicio-03/src/Limp/Frontend/Parser/: Parser.hs  Parser.y
2024-2/Compiladores/exercicio-03/src/Limp/Frontend/Semantics/: Basics.hs  ExpTypeChecker.hs  StatementTypeChecker.hs
2024-2/Compiladores/exercicio-03/src/Limp/Interpreter/: LimpInterpreter.hs
2024-2/Compiladores/exercicio-03/src/Limp/Syntax/: Syntax.hs
2024-2/Compiladores/trabalho-pratico/tp3/: CHANGELOG.md  LICENSE  Lang.cabal
2024-2/Compiladores/trabalho-pratico/tp3/app/: ConvertingToTree.hs  Main.hs
2024-2/Compiladores/trabalho-pratico/tp3/app/Backend/Python/: ExpPythonCodegen.hs  StatementPythonCodegen.hs
2024-2/Compiladores/trabalho-pratico/tp3/app/Backend/SVM/: ExpCodegen.hs  StatementCodeGen.hs
2024-2/Compiladores/trabalho-pratico/tp3/app/Frontend/Lexer/: Lexer.hs  Lexer.x
2024-2/Compiladores/trabalho-pratico/tp3/app/Frontend/Parser/LALR/: Parser.hs  Parser.info  Parser.y
2024-2/Compiladores/trabalho-pratico/tp3/app/Frontend/Parser/PEG/: Grammar.hs  Parser.hs  ParsingExp.hs
2024-2/Compiladores/trabalho-pratico/tp3/app/Frontend/Parser/Recursive/: Parser.hs  SimpleCombinators.hs
2024-2/Compiladores/trabalho-pratico/tp3/app/Frontend/Semantics/: Basics.hs  ExpTypeCheck.hs  StatementTypeChecker.hs
2024-2/Compiladores/trabalho-pratico/tp3/app/Interpreter/: LangInterpreter.hs
2024-2/Compiladores/trabalho-pratico/tp3/app/SVM/: Instr.hs
2024-2/Compiladores/trabalho-pratico/tp3/app/Syntax/: Syntax.hs
2024-2/Compiladores/trabalho-pratico/tp3/codigos_teste/: array.lang  cmdFuncCall.lang  cmdFuncCall.py  composicao.lang  composicao.py  fatorial_iterativo.lang  fatorial_iterativo.py  fatorial_recursivo.lang  fatorial_recursivo.py  fibonacci_iterativo.lang  fibonacci_iterativo.py  fibonacci_recursivo.lang  fibonacci_recursivo.py  if_else.lang  if_else.py  ordenacao.lang  teste.lang
2024-2/Compiladores/trabalho-pratico/tp3/codigos_teste/estruturas_de_dados/: arvore_binaria.lang  arvore_binaria.py  arvore_binaria_vetor.lang  arvore_binaria_vetor.py  fila.lang  fila.py  fila_com_no.lang  fila_com_no.py  lista_encadeada.lang  lista_encadeada.py  pilha.lang  pilha.py  pilha2.lang  pilha2.py  pilha_com_no.lang  pilha_com_no.py
2024-2/Compiladores/trabalho-pratico/tp3/codigos_teste/ordenacao/: bubble_sort.lang  bubble_sort.py  insertion_sort.lang  insertion_sort.py  merge_sort.lang  merge_sort.py  selection_sort.lang  selection_sort.py
2024-2/Compiladores/trabalho-pratico/tp3/test/: MainTeste.hs
2024-2/Compiladores/trabalho-pratico/tp3/test/Backend/Python/: TestExpPythonCodeGen.hs
2024-2/Compiladores/trabalho-pratico/tp3/test/Frontend/Lexer/: TestLexer.hs
2024-2/Compiladores/trabalho-pratico/tp3/test/Frontend/Parser/LALR/: TestLALR.hs
2024-2/Compiladores/trabalho-pratico/tp3/test/Frontend/Parser/PEG/: TestPEG.hs
2024-2/Compiladores/trabalho-pratico/tp3/test/Frontend/Parser/Recursive/: TestParser.hs
2024-2/Compiladores/trabalho-pratico/tp3/test/TestFiles/: teste.lang  testeData.lang
(+3047 files in other folders)
