cabal-version:      3.0
name:               imp

version:            0.1.0.0

license:            MIT

license-file:       LICENSE

author:             Rodrigo Ribeiro

maintainer:         rodrigogribeiro@gmail.com

category:           Language
build-type:         Simple

extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  
      Limp.Backend.C.ExpCCodegen
      Limp.Backend.C.StatementCCodegen
      Limp.Backend.SVM.ExpCodegen 
      Limp.Backend.SVM.StatementCodegen 
      Limp.Frontend.Lexer.Lexer
      Limp.Frontend.Parser.Parser 
      Limp.Frontend.Semantics.Basics
      Limp.Frontend.Semantics.ExpTypeChecker
      Limp.Frontend.Semantics.StatementTypeChecker
      Limp.Interpreter.LimpInterpreter
      Limp.Syntax.Syntax
      SVM.Instr
      SVM.Interp
      SVM.StackLexer
      SVM.StackParser
      Documentation.DocStmt
      Documentation.Doc

      Imp.Backend.C.ExpCCodegen
      Imp.Backend.C.StatementCCodegen
      Imp.Backend.SVM.ExpCodegen 
      Imp.Backend.SVM.StatementCodegen 
      Imp.Frontend.Lexer.Lexer
      Imp.Frontend.Parser.Parser 
      Imp.Frontend.Semantics.Basics
      Imp.Frontend.Semantics.ExpTypeChecker
      Imp.Frontend.Semantics.StatementTypeChecker
      Imp.Interpreter.ImpInterpreter
      Imp.Syntax.Syntax


    build-depends:    base,
                      containers,
                      mtl,
                      array,
                      megaparsec,
                      parser-combinators,
                      filepath,
                      process,
                      pretty
 
    hs-source-dirs:   src

    default-language: Haskell2010

executable limp
    import:           warnings

    main-is:          Main.hs

    build-depends:
        base,
        pretty, 
        filepath,
        imp

    hs-source-dirs:   app

    default-language: Haskell2010

test-suite imp-test
    import:           warnings

    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs

    build-depends:
        base,
        imp

executable svm
    import:           warnings
    main-is:          VMMain.hs

    build-depends:
        base,
        pretty, 
        filepath,
        imp

    hs-source-dirs:   src/SVM
    default-language: Haskell2010

